# container_of

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/avakar/: container_of.h
src/: bitcast.h
test/: test.cpp
